# payment-gateway

./: .bazelrc  .env.example  .gitignore  AGENTS.md  BUILD.bazel  Makefile  README.md  WORKSPACE  bazel_ci.sh  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml
analytics-fraud-python/: BUILD.bazel  MODULE.bazel  requirements.txt
analytics-fraud-python/src/: main.py
connectors-go/: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  go.mod
connectors-go/cmd/server/: main.go
connectors-go/internal/acquirers/: airtel_adapter.go  airtel_adapter_test.go  kyc_adapter.go  marqeta_adapter.go  tnm_adapter.go  tnm_adapter_test.go  webhook_handler.go  webhook_handler_redis_test.go  webhook_handler_test.go
connectors-go/internal/config/: config.go
connectors-go/internal/observability/: logging.go  metrics.go
connectors-go/internal/queue/: queue.go
connectors-go/internal/settlement/: settlement_worker.go
connectors-go/internal/workers/: retries.go
docs/: mvp_scope_lock.yaml  pci-readiness-checklist.md  production-readiness.md
docs/api/: error-codes.md  openapi.yaml
docs/runbooks/: dlq-handling.md
docs/sre/: runbooks.md
edge-node/: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  jest.config.js  package-lock.json  package.json  tsconfig.json
edge-node/scripts/: bazel_commit.ps1  replay_dlq.ts
edge-node/src/: app.ts
edge-node/src/api/v1/charges/: controller.js  service.js
edge-node/src/api/v1/customers/: controller.js  service.js
edge-node/src/api/v1/health/: index.js
edge-node/src/api/v1/refunds/: controller.js  service.js
edge-node/src/api/v1/webhooks/: receiver.js  verifier.js
edge-node/src/auth/: jwt.js
edge-node/src/config/: index.js
edge-node/src/events/: producer.js
edge-node/src/middleware/: auth.ts  rateLimit.js  waf.ts
edge-node/src/repositories/: pgRepository.js
edge-node/src/routes/: kyc.ts  webhook.ts
edge-node/src/services/: depositProviderAdapter.js
edge-node/src/utils/: idempotency.js  metrics.ts
edge-node/src/validation/: schemas.js  webhookSchemas.ts
edge-node/src/workers/: kafkaProducer.ts  queue.ts  reconciliationWorker.js
edge-node/tests/unit/: queue_idempotency.test.ts  webhookSchemas.test.ts  webhook_auth.test.ts
infra/argo/: applications.yaml  rollouts.yaml
infra/docker/: docker-compose.yml
infra/terraform/: main.tf
infra/vault/policies/: bootstrap.hcl  secret-rotation.hcl
infrastructure-iac/terraform/: provider.tf
migrations/: 000_init_roles.sql  001_create_merchants.sql  002_create_customers.sql  003_create_payment_tokens.sql  004_create_charges.sql  005_create_ledger.sql  006_create_webhooks.sql  007_indexes_and_constraints.sql  008_create_users_kyc_aml.sql  009_create_cards.sql  010_create_fx_offers.sql  011_create_ledger_outbox.sql  012_least_privilege_users.sql
notifications-service/: go.mod
notifications-service/cmd/server/: main.go
ops-portal-react/: package.json
ops-portal-react/src/app/: page.tsx
ops-portal-react/src/app/admin/: layout.tsx
ops-portal-react/src/app/admin/dashboard/: page.tsx
ops-portal-react/src/app/admin/kyc/: page.tsx
ops-portal-react/src/app/cards/: page.tsx
ops-portal-react/src/app/dashboard/: page.tsx
ops-portal-react/src/app/fx/: page.tsx
ops-portal-react/src/app/kyc/: page.tsx
ops-portal-react/src/app/login/: page.tsx
ops-portal-react/src/app/privacy/: page.tsx
ops-portal-react/src/app/profile/: page.tsx
ops-portal-react/src/app/signup/: page.tsx
ops-portal-react/src/app/terms/: page.tsx
ops-portal-react/src/app/wallets/: page.tsx
ops-portal-react/src/components/: ui.tsx
ops-portal-react/src/context/: AuthContext.tsx
ops-portal-react/src/services/: api.ts
payments-core-rust/: .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel
payments-core-rust/src/: main.rs  matching_engine.rs
payments-core-rust/src/domain/: order.rs
scripts/: commit_all.sh  test_phase2_flow.sh
shared-contracts/: .gitignore
shared-contracts/json-schemas/: charge.request.json  refund.request.json
shared-contracts/proto/: payment.proto
shared-contracts/protobuf/: payment.proto  settlement.proto  webhook.proto
test-harness/: BUILD.bazel  MODULE.bazel
test-harness/chaos/: scenarios.sh
test-harness/go/load-tester/: main.go
test-harness/go/mock-acquirer/: main.go
test-harness/scripts/: bazel_commit.sh
