module(name = "analytics_fraud_python", version = "1.0.0")

bazel_dep(name = "rules_python", version = "0.31.0")

pip = use_extension("@rules_python//python/pip_install:extension.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pip")
