load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

sh_binary(
    name = "commit",
    srcs = ["scripts/bazel_commit.sh"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "matching-engine-lib",
    srcs = ["src/matching_engine.rs"],
    edition = "2021",
    deps = all_crate_deps(
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "matching-engine",
    srcs = ["src/main.rs"],
    edition = "2021",
    deps = [
        ":matching-engine-lib",
    ] + all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "matching-engine-test",
    crate = ":matching-engine-lib",
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
