module(name = "payments_core_rust", version = "1.0.0")

bazel_dep(name = "rules_rust", version = "0.41.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    manifest = "//:Cargo.toml",
)

use_repo(crate, "crates")
